--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -5,14 +5,28 @@ body {
   font-family: 'Lato', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #E9EFF1;
 }
 
 .avatar{
-  width: 38px;
-  height: 38px;
+  width: 40px;
+  height: 40px;
   background-image: url(../img/avatar.jpg);
   background-position: center;
   background-size: cover;
+  border-radius: 5px;
+  border: 1px solid #fff;
+}
+
+
+.tac{
+  text-align: center
+}
+.tar{
+  text-align: right;
+}
+.tal{
+  text-align: left;
 }
 
 .d-flex{
@@ -21,18 +35,244 @@ body {
 .header{
   background-color: $blackColor;
   color: #fff;
-  border-bottom: solid $mainColor 3px;
+  border-bottom: solid #00BA70 3px;
   &__logo{
     margin: 0 !important;
+    padding: 0;
     &__img{
       max-width: 175px;
+      margin-left: 45px;
+      display: block;
     }
   }
   &__box{
     justify-content: space-between;
+    align-items: center;
   }
   &__avatar{
     margin-top: 10px;
     margin-bottom: 10px;
+    align-items: center;
+    margin-right: 28px;
+    &__arrow{
+      width: 0;
+      height: 0;
+      border-left: 4px solid transparent;
+      border-right: 4px solid transparent;
+      border-top: 7px solid #fff;
+      margin-left: 5px;
+
+    }
+  }
+  &__list{
+    padding: 0;
+    list-style: none;
+    align-self: flex-end;
+    margin: 0;
+    &__item{
+      background-color: #5B687A;
+      padding: 9px 10px 4px;
+      margin-right: 10px;
+      border-top-left-radius: 8px;
+      border-top-right-radius: 8px;
+      font-weight: 700;
+      font-size: 18px;
+      cursor: pointer;
+      &.active,
+      &:hover{
+        background-color: $mainColor;
+      }
+      &--bell{
+        background-color: transparent !important;
+        .icon-bell{
+          font-size: 24px
+        }
+      }
+    }
+  }
+}
+
+//-> SUBMENU
+.SubMenu{
+  background-color: #fff;
+  &__box{
+    align-items: center;
+  }
+  &__filter{
+    background-color: $blackColor;
+    color:#fff;
+    padding: 9px 10px ;
+  }
+  &__counter{
+    padding: 0 14px;
+    &__num{
+      background-color: #D6E0E6;
+      font-weight: 700;
+      color:#373941;
+      font-size: .9rem;
+      padding: 4px 10px;
+      border-radius: 14px;
+    }
+  }
+  &__name{
+    font-weight: 700;
+    font-size: 1.1rem;
+  }
+  &__views{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    margin-left: 20px;
+    &__item{
+      padding: 6px;
+      border: 1px solid #E8E8E8;
+      color: #3B4048;
+      &:last-child{
+        border-top-right-radius: 5px;
+        border-bottom-right-radius: 5px;
+      }
+      &:first-child{
+        border-top-left-radius: 5px;
+        border-bottom-left-radius: 5px;
+      }
+      &.active{
+        color: #fff;
+        background-color: $mainColor;
+      }
+    }
+  }
+  &__search{
+    border-left: 1px solid #E8E8E8;
+    height: 100%;
+    margin-left: 14px;
+    padding: 6px;
+    flex-grow: 1;
+    &__icon{
+      font-size: 1.2rem;
+    }
+    &__input{
+      border: none;
+      margin-left: 7px;
+      width: 100%;
+      &:focus{
+        box-shadow: none;
+        outline: none;
+        border: none;
+      }
+    }
+  }
+  &__btn{
+    color: $mainColor;
+    border: 1px solid $mainColor;
+    margin-right: 20px;
+    border-radius: 5px;
+    padding: 5px 13px;
+    align-items: center;
+    cursor: pointer;
+    .arrow__down{
+      width: 0;
+      height: 0;
+      border-left: 4px solid transparent;
+      border-right: 4px solid transparent;
+      border-top: 5px solid;
+      display: inline-block;
+      margin-left: 6px;
+    }
+    &:hover{
+      background-color: $mainColor;
+      color: #fff;
+    }
+  }
+}
+
+.container{
+  max-width: 1248px;
+  margin: 30px auto;
+}
+.row{
+  flex-wrap: wrap;
+}
+.col{
+  min-width: 20%;
+  padding: 5px;
+  box-sizing: border-box;
+}
+.card{
+  background-color: #fff;
+  border-radius: 10px;
+  overflow: hidden;
+  border: 1px solid #E4E6E7;
+  color: #3A3D45;
+  &__header{
+    height: 110px;
+    background-size:  20%;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  &__body{
+    padding: 16px;
+    padding-top: 0;
+    font-size: 14px;
+    &__box{
+      border-top: 2px solid #EFF3F5;
+      padding-top: 14px;
+    }
+    &__price{
+      font-size: 28px;
+      font-weight: 700;
+    }
+    &__row {
+      &:last-child{
+        color: #232323;
+        padding-left: 20px;
+        font-weight: 700; 
+      }
+      p:last-child{
+        margin-bottom: .5rem;
+      }
+    }
+  }
+  &__footer{
+    color: #989898;
+    align-items: flex-end;
+    justify-content: space-between;
+    &__num{
+      font-size: 22px;
+      font-weight: 700;
+    }
+  }
+  &.won{
+    .card__body{
+      background-color: $mainColor;
+      color:#fff;
+      &__box{
+        border: transparent;
+      }
+    }
+    .card__body__row{
+      &:last-child{
+        color: #fff;
+      }
+    }
+    .card__footer__num{
+      color:#fff;
+    }
+  }
+  &.lost{
+    .card__body{
+      background-color: #F5F5F6;
+      color:#9A9A9A;
+      &__box{
+        border: transparent;
+      }
+    }
+    .card__body__row{
+      &:last-child{
+        color: #9A9A9A;
+      }
+    }
+    .card__footer__num{
+      color:#E3E3E3;
+    }
   }
 }
